authentication using lightning

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
-PORT= 5002
-
+PORT= 3000
 # lnd
 LND_MACROON_PATH = ''
 LND_TLS_PATH = ''
 LND_RPC_URL = ''
-
 # server
 SERVER_BASE_URL = https://xxxxxxxx.ngrok.io/
+#cloudinary
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
