--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   },
   "homepage": "https://github.com/TChukwuleta/lnauthproject#readme",
   "dependencies": {
+    "cloudinary": "^1.33.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
     "lnurl": "^0.24.2",
+    "qrcode": "^1.5.1",
     "socket.io": "^4.5.4"
   },
   "devDependencies": {
